# oci-registry-p2p

./: .bazelrc  .gitignore  .goreleaser.yml  BUILD.bazel  Dockerfile  Dockerfile.src  LICENSE  Makefile  README.md  WORKSPACE  config.yaml  example-config.yaml  go.mod  go.sum  key.pem  main.go
.github/workflows/: pull_request.yaml  release.yml
bazel/: deps.bzl
ci/: BUILD.bazel  container.bzl  images.bzl  platforms.bzl  print-workspace-status.sh
docs/: middleware.md
install/: docker-registry-p2p.unit  oci-registry-p2p.service  oci-registry-p2p.unit
install/helm/docker-registry-p2p/: Chart.yaml  values.schema.json  values.yaml
install/helm/docker-registry-p2p/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
install/helm/docker-registry-p2p/templates/tests/: test-connection.yaml
install/helm/oci-registry-p2p/: values.schema.json  values.yaml
install/helm/oci-registry-p2p/templates/: certificate.yaml  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
registry/middleware/: BUILD.bazel  middleware.go
registry/middleware/ipfs/: ens.go  ipfs_suite_test.go  middleware.go  middleware_test.go
registry/storage/driver/ipfs/: driver.go  utils.go
registry/storage/driver/orbitdb/: BUILD.bazel  driver.go  driver.go_
scripts/: BUILD.bazel  Dockerfile.example  Dockerfile.systemdtest  README-RELEASE-template.md  README.md  certs.sh  config-inmem.yaml  createdb.go  deploy.yaml  example-config-middleware.yaml  example-config.yaml  oci-registry-p2p.service
test/e2e/: BUILD.bazel  cert.pem  config.yaml  e2e_test.go  e2e_utils.go  prep.sh  testsystemd.sh
test/e2e/images/: Dockerfile  README.md  build.sh
test/e2e/images/hello/: index.json
tools/: tools.go
version/: version.go
