load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = [
        "e2e_suite_test.go",
        "e2e_test.go",
    ],
    deps = [
        "//registry/storage/driver/orbitdb",
        "@com_github_docker_distribution//configuration:go_default_library",
        "@com_github_docker_distribution//registry:go_default_library",
        "@com_github_docker_distribution//registry/storage/driver:go_default_library",
        "@com_github_docker_distribution//registry/storage/driver/factory:go_default_library",
        "@com_github_ipfs_go_datastore//:go_default_library",
        "@com_github_ipfs_go_datastore//sync:go_default_library",
        "@com_github_ipfs_go_ipfs//core:go_default_library",
        "@com_github_ipfs_go_ipfs//core/coreapi:go_default_library",
        "@com_github_ipfs_go_ipfs//core/mock:go_default_library",
        "@com_github_ipfs_go_ipfs//keystore:go_default_library",
        "@com_github_ipfs_go_ipfs//repo:go_default_library",
        "@com_github_ipfs_go_ipfs_config//:go_default_library",
        "@com_github_ipfs_interface_go_ipfs_core//:go_default_library",
        "@com_github_libp2p_go_libp2p//p2p/net/mock:go_default_library",
        "@com_github_libp2p_go_libp2p_core//crypto:go_default_library",
        "@com_github_libp2p_go_libp2p_peer//:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@tech_berty_go_orbit_db//:go_default_library",
        "@tech_berty_go_orbit_db//accesscontroller:go_default_library",
    ],
)
